--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,8 +46,8 @@ jobs:
       # Step 7: Pull Docker image (for ECS)
       - name: Pull Docker image from Docker Hub
         run: |
-          docker pull hemanth42079/medusa-store:latest
-          echo "Pulled image: hemanth42079/medusa-store:latest"
+          docker pull naveenkholi/medsa:latest
+          echo "Pulled image: naveenkholi/medsa:latest"
 
       # Step 8: Update ECS task definition
       - name: Update ECS task definition
@@ -59,7 +59,7 @@ jobs:
 
           NEW_TASK_DEF=$(echo "$TASK_DEF" | jq \
             '.taskDefinition |
-            .containerDefinitions[0].image = "hemanth42079/medusa-store:latest" |
+            .containerDefinitions[0].image = "naveenkholi/medsa:latest" |
             del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
 
           NEW_TASK_DEF_ARN=$(aws ecs register-task-definition \
