--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -49,26 +49,23 @@ jobs:
           docker pull naveenkholi/medsa:latest
           echo "Pulled image: naveenkholi/medsa:latest"
 
-      # Step 7: Update ECS task definition with new image
+    # Step 8: Update ECS task definition
       - name: Update ECS task definition
         id: update-task-def
-        run: |
-          set -euo pipefail
-
-          echo "Fetching latest revision of ECS task definition family: medusa-task"
-          LATEST_TASK_DEF=$(aws ecs describe-task-definition \
+        run: aws ecs list-task-definitions --region us-east-1
+          TASK_DEF=$(aws ecs describe-task-definition \
             --task-definition medusa-task \
             --region us-east-1)
 
-          NEW_TASK_DEF=$(echo "$LATEST_TASK_DEF" | jq \
-            '.taskDefinition |
-             .containerDefinitions[0].image = "naveenkholi/medsa:latest" |
-             del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
+          NEW_TASK_DEF=$(echo "$TASK_DEF" | jq \
+            '.taskDefinition medusa-store-task
+            .containerDefinitions[0].image = "naveenkholi/medsa:latest" |
+            del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
 
-          echo "Registering new ECS task definition"
           NEW_TASK_DEF_ARN=$(aws ecs register-task-definition \
+            --region us-east-1 \
             --cli-input-json "$NEW_TASK_DEF" \
-            --region us-east-1 | jq -r '.taskDefinition.taskDefinitionArn')
+            | jq -r '.taskDefinition.taskDefinitionArn')
 
           echo "task_definition_arn=$NEW_TASK_DEF_ARN" >> $GITHUB_OUTPUT
 
