--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,11 +54,11 @@ jobs:
         id: update-task-def
         run: aws ecs list-task-definitions --region us-east-1
           TASK_DEF=$(aws ecs describe-task-definition \
-            --task-definition medusa-task \
+            --task-definition medsa-task \
             --region us-east-1)
 
           NEW_TASK_DEF=$(echo "$TASK_DEF" | jq \
-            '.taskDefinition medusa-store-task
+            '.taskDefinition medsa-store-task
             .containerDefinitions[0].image = "naveenkholi/medsa:latest" |
             del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
 
