--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -49,6 +49,25 @@ jobs:
           docker pull naveenkholi/medsa:latest
           echo "Pulled image: naveenkholi/medsa:latest"
 
+      # Step 8: Update ECS task definition
+      - name: Update ECS task definition
+        id: update-task-def
+        run: |
+          TASK_DEF=$(aws ecs describe-task-definition \
+            --task-definition medusa-task \
+            --region us-east-1)
+
+          NEW_TASK_DEF=$(echo "$TASK_DEF" | jq \
+            '.taskDefinition |
+            .containerDefinitions[0].image = "naveenkholi/medsa:latestt" |
+            del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
+
+          NEW_TASK_DEF_ARN=$(aws ecs register-task-definition \
+            --region us-east-1 \
+            --cli-input-json "$NEW_TASK_DEF" \
+            | jq -r '.taskDefinition.taskDefinitionArn')
+
+
    
 
       # Step 9: Update ECS service
